--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-form-data": "^2.0.6",
+    "multer": "^1.4.1",
     "random-string": "^0.2.0"
   }
 }
