--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-form-data": "^2.0.6",
+    "knex": "^0.16.3",
     "multer": "^1.4.1",
+    "pg": "^7.7.1",
     "random-string": "^0.2.0"
   }
 }
