--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.16.4",
     "express-form-data": "^2.0.6",
     "knex": "^0.16.3",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.7.1",
     "random-string": "^0.2.0"
   }
